derive_builder/tests/compile-fail/builder_field_attrs.stderr
error: cannot find attribute `no_such_attribute` in this scope
  --> tests/compile-fail/builder_field_attrs.rs:10:11
   |
10 |         #[no_such_attribute]
   |           ^^^^^^^^^^^^^^^^^
